--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "next dev"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.11.0",
     "next": "13.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@tanstack/react-table": "^8.11.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "24.0.7",
+    "@types/react": "19.1.8",
     "autoprefixer": "10.4.14",
     "postcss": "8.4.21",
     "tailwindcss": "3.3.2",
